Bug 1153895 - Support audio AMR-WB for Gonk in MP4Reader. r=jya